<resources>
    <string name="app_name">DonateAnything</string>

    <!--Login / Sign up / Reset Password-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot"><b>FORGOT PASSWORD?</b></string>
    <string name="forgotPwd"><b>Forgot Password</b></string>
    <string name="login"><b>LOGIN</b></string>
    <string name="sign_up"><b>Sign Up</b></string>
    <string name="sign_out">Logout</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn"><b>Sign In</b></string>
    <string name="username">Username</string>
    <string name="phone">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="create_account"><b>Create Account</b></string>
    <string name="reset">Reset Password</string>
    <string name="todo">TODO</string>
    <string name="dhacc">Don\'t have account?</string>
    <string name="alrhave">Already have account?</string>
    <string name="sendMail">Send Email</string>
    <string name="donateanything">DonateAnything</string>

    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="event">Event</string>

    <string name="newsTitle1">West Afica: Extreme poverty rises nearly poverty rises nearly 3 per cent to COVID-19</string>
    <string name="newsTitle2">Lebanon: Almost three-quarters of the population living in poverty</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donate">Donate</string>
    <string name="form">Donate Form</string>
    <string name="ic">IC number</string>
    <string name="titleDonate">" "</string>
    <string name="campus_spinner">Choose campus</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="next">NEXT</string>
    <string name="value">number of value</string>
    <string name="unit">unit</string>
    <string name="bank">bank</string>
    <string name="accountNo">Account No</string>
    <string name="payment">Payment</string>
    <string name="pacNo">Pac No</string>
    <string name="request">REQUEST</string>
    <string name="submit">SUBMIT</string>
    <string name="item_spinner">Choose item</string>
    <string name="address">Address</string>
    <string name="item">Item Name</string>
    <string name="receipt">Receipt</string>

    <string name="needs1">Types of donation needed: \n Money: RM50000 \n Supply : 100 bag of cloth \n Food : 20 bag of rice</string>
    <string name="needs2">Types of donation needed: \n Money: RM10000 \n Food : 10 bag of rice</string>
    <string name="admin">Admin</string>
    <string name="admin_donate_list">Donate Form List</string>
    <string name="admin_donate_detail">Donate Form Detail</string>

    <string-array name="unit">
        <item>unit</item>
        <item>bottle</item>
        <item>bag</item>
        <item>kg</item>
        <item>g</item>
        <item>ml</item>
        <item>l</item>
    </string-array>

</resources>