<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/righteous"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="50dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/righteous"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="50dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAcc" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/righteous"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingStart="50dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editPwd"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/righteous"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="50dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />

    <EditText
        android:id="@+id/editPwd1"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/righteous"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="50dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPwd" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_round"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/righteous"
        android:text="@string/signUp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPwd1" />

    <TextView
        android:id="@+id/alrhave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/righteous"
        android:text="@string/alrhave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup"
        app:layout_constraintVertical_bias="0.775" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/righteous"
        android:text="@string/signIn"
        android:textColor="@color/link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toEndOf="@+id/alrhave"
        app:layout_constraintTop_toTopOf="@+id/alrhave"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/mailIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toTopOf="@+id/editEmail"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_outline_email_24" />

    <ImageView
        android:id="@+id/pwdIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/editPwd"
        app:layout_constraintStart_toStartOf="@+id/editPwd"
        app:layout_constraintTop_toTopOf="@+id/editPwd"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_outline_lock_24" />

    <ImageView
        android:id="@+id/pwd1Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/editPwd1"
        app:layout_constraintStart_toStartOf="@+id/editPwd1"
        app:layout_constraintTop_toTopOf="@+id/editPwd1"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_outline_lock_24" />

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/editPhone"
        app:layout_constraintStart_toStartOf="@+id/editPhone"
        app:layout_constraintTop_toTopOf="@+id/editPhone"
        app:srcCompat="@drawable/ic_baseline_phone_24" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/editName"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toTopOf="@+id/editName"
        app:srcCompat="@drawable/ic_outline_account_circle_24" />

    <TextView
        android:id="@+id/CreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/righteous"
        android:text="@string/create_account"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="26dp"
        android:layout_height="29dp"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/CreateAcc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CreateAcc"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>