<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    tools:context=".fragments.DonateForm2Fragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <Button
            android:id="@+id/requestBtn"
            android:layout_width="137dp"
            android:layout_height="58dp"
            android:background="@drawable/button_round"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/righteous"
            android:text="@string/request"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/pacNo"
            app:layout_constraintTop_toTopOf="@+id/pacNo"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/pacNo"
            android:layout_width="182dp"
            android:layout_height="59dp"
            android:layout_marginStart="48dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:hint="@string/pacNo"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="50dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment" />

        <EditText
            android:id="@+id/payment"
            android:layout_width="321dp"
            android:layout_height="64dp"
            android:layout_marginStart="48dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:hint="@string/payment"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="50dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountNo" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="320dp"
            android:layout_height="0dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="104dp"
            android:background="@drawable/button_round"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/righteous"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pacNo"
            tools:ignore="TextContrastCheck" />


        <TextView
            android:id="@+id/form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:fontFamily="@font/righteous"
            android:text="@string/form"
            android:textColor="#000000"
            android:textSize="32sp"
            app:layout_constraintStart_toEndOf="@+id/back4"
            app:layout_constraintTop_toTopOf="@+id/back4" />

        <EditText
            android:id="@+id/accountNo"
            android:layout_width="321dp"
            android:layout_height="64dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:hint="@string/accountNo"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="50dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bank_spinner" />

        <ImageView
            android:id="@+id/imgBg"
            android:layout_width="300dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/bg" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="2dp"
            android:layout_marginTop="39dp"
            android:background="#939393"
            android:backgroundTint="#939393"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form" />

        <TextView
            android:id="@+id/donateItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="19dp"
            android:text="&quot; &quot;"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Spinner
            android:id="@+id/bank_spinner"
            android:layout_width="319dp"
            android:layout_height="59dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="37dp"
            android:background="@drawable/edit_round"
            android:contentDescription="@string/bank"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:paddingStart="50dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donateItem" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>