<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    tools:context=".fragments.DonateFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="320dp"
            android:layout_height="0dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="229dp"
            android:background="@drawable/button_round"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/righteous"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transportion_s"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/backBtn1"
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="27dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:fontFamily="@font/righteous"
            android:text="@string/form"
            android:textColor="#000000"
            android:textSize="32sp"
            app:layout_constraintStart_toEndOf="@+id/backBtn1"
            app:layout_constraintTop_toTopOf="@+id/backBtn1" />

        <EditText
            android:id="@+id/valueNo"
            android:layout_width="229dp"
            android:layout_height="61dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:hint="@string/value"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="50dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName" />

        <EditText
            android:id="@+id/address"
            android:layout_width="312dp"
            android:layout_height="68dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="37dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:hint="@string/address"
            android:importantForAutofill="yes"
            android:inputType="textPostalAddress"
            android:paddingStart="50dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transportion_s" />

        <ImageView
            android:id="@+id/imgBg"
            android:layout_width="300dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/bg" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="2dp"
            android:layout_marginTop="30dp"
            android:background="#939393"
            android:backgroundTint="#939393"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn1" />

        <TextView
            android:id="@+id/donateItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="19dp"
            android:text="&quot; &quot;"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Spinner
            android:id="@+id/unit_spinner"
            android:layout_width="87dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/edit_round"
            android:contentDescription="@string/unit"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toEndOf="@+id/valueNo"
            app:layout_constraintTop_toTopOf="@+id/valueNo" />

        <Switch
            android:id="@+id/transportion_s"
            android:layout_width="314dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/righteous"
            android:text="TRANSPORTATION"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valueNo" />

        <EditText
            android:id="@+id/itemName"
            android:layout_width="312dp"
            android:layout_height="68dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:hint="@string/item"
            android:importantForAutofill="yes"
            android:paddingStart="50dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donateItem" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>