<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    tools:context=".ForgotPwd">

    <TextView
        android:id="@+id/forgotPwd"
        android:layout_width="216dp"
        android:layout_height="34dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/righteous"
        android:text="@string/forgotPwd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="26dp"
        android:layout_height="29dp"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/forgotPwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/forgotPwd"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <EditText
        android:id="@+id/forgotEmail"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/righteous"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="50dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPwd" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/forgotEmail"
        app:layout_constraintStart_toStartOf="@+id/forgotEmail"
        app:layout_constraintTop_toTopOf="@+id/forgotEmail"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_outline_email_24" />

    <Button
        android:id="@+id/btnSendMail"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_round"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/righteous"
        android:text="@string/sendMail"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>